--- a/kafka/channel/config/200-dispatcher-clusterrole.yaml
+++ b/kafka/channel/config/200-dispatcher-clusterrole.yaml
@@ -79,3 +79,26 @@ rules:
       - create
       - patch
       - update
+  - apiGroups:
+      - ""
+    resources:
+      - services
+      - endpoints
+      - serviceaccounts
+    verbs:
+      - list
+      - watch
+  - apiGroups:
+      - "rbac.authorization.k8s.io"
+    resources:
+      - rolebindings
+    verbs:
+      - list
+      - watch
+  - apiGroups:
+      - "apps"
+    resources:
+      - deployments
+    verbs:
+      - list
+      - watch
