--- a/natss/config/200-controller-serviceaccount.yaml
+++ b/natss/config/200-controller-serviceaccount.yaml
@@ -1,4 +1,4 @@
-# Copyright 2019 The Knative Authors
+# Copyright 2020 The Knative Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,20 +13,9 @@
 # limitations under the License.
 
 apiVersion: v1
-kind: Service
+kind: ServiceAccount
 metadata:
-  name: natss-ch-dispatcher
+  name: natss-ch-controller
   namespace: knative-eventing
   labels:
     contrib.eventing.knative.dev/release: devel
-    messaging.knative.dev/channel: natss-channel
-    messaging.knative.dev/role: dispatcher
-spec:
-  selector:
-    messaging.knative.dev/channel: natss-channel
-    messaging.knative.dev/role: dispatcher
-  ports:
-  - name: http-dispatcher
-    port: 80
-    protocol: TCP
-    targetPort: 8080
