--- a/natss/config/200-dispatcher-clusterrole.yaml
+++ b/natss/config/200-dispatcher-clusterrole.yaml
@@ -16,29 +16,90 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: natss-ch-dispatcher
+  labels:
+    contrib.eventing.knative.dev/release: devel
 rules:
   - apiGroups:
       - messaging.knative.dev
     resources:
       - natsschannels
-      - natsschannels/status
     verbs:
       - get
       - list
       - watch
-      - update
       - patch
   - apiGroups:
       - messaging.knative.dev
     resources:
-      - natsschannels/finalizers
+      - natsschannels/status
     verbs:
+      - get
       - update
+      - patch
   - apiGroups:
       - "" # Core API group.
+    resources:
+      - events
+    verbs:
+      - create
+      - patch
+      - update
+  - apiGroups:
+      - messaging.knative.dev
+    resources:
+      - natsschannels
+    verbs:
+      - get
+      - list
+      - watch
+      - patch
+  - apiGroups:
+      - ""
     resources:
       - configmaps
     verbs:
       - get
       - list
       - watch
+  - apiGroups:
+      - "" # Core API Group.
+    resources:
+      - events
+    verbs:
+      - create
+      - patch
+  - apiGroups:
+      - "coordination.k8s.io"
+    resources:
+      - leases
+    verbs:
+      - get
+      - list
+      - watch
+      - create
+      - patch
+      - update
+  - apiGroups:
+      - ""
+    resources:
+      - services
+      - endpoints
+      - serviceaccounts
+    verbs:
+      - list
+      - watch
+  - apiGroups:
+      - "rbac.authorization.k8s.io"
+    resources:
+      - rolebindings
+    verbs:
+      - list
+      - watch
+  - apiGroups:
+      - "apps"
+    resources:
+      - deployments
+    verbs:
+      - list
+      - watch
+
