--- a/natss/config/201-clusterrolebinding.yaml
+++ b/natss/config/201-clusterrolebinding.yaml
@@ -33,6 +33,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: natss-ch-dispatcher
+  labels:
+    contrib.eventing.knative.dev/release: devel
 subjects:
   - kind: ServiceAccount
     name: natss-ch-dispatcher
