--- a/natss/config/500-controller.yaml
+++ b/natss/config/500-controller.yaml
@@ -42,6 +42,10 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: CONFIG_LEADERELECTION_NAME
+              value: config-leader-election-natss
+            - name: DISPATCHER_IMAGE
+              value: ko://knative.dev/eventing-contrib/natss/cmd/channel_dispatcher
           ports:
             - containerPort: 9090
               name: metrics
